--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
+body {
+    background-image: url("../images/Philly-Sports-Logos.jpg");
+}
+
+div {
+    background-color: white;
+    height: 40%;
+    width: 40%;
+    text-align: center;
+    padding: 5%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
 h1 {
     font-weight: bold;
     font-size: 3rem;
